--- a/mainPiexlWorld.css
+++ b/mainPiexlWorld.css
@@ -14,22 +14,58 @@ body {
     color: #FFFFFF;
 }
 
+.header{
+}
+#webMap{
+    border-bottom: 4px solid #FFFFFF;
+}
+
 table {
     margin-left: auto;
     margin-right: auto;
 }
 
 th {
+    height: 100%;
     padding-top: 12px;
     padding-left: 30px;
     padding-right: 30px;
     font-size: 24px;
 }
 
+a {
+    text-decoration: none;
+    color: #FFFFFF;
+}
+
 .main {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+    height: 100%;
+}
+
+#logo{
+    padding-top: 48px;
+    padding-bottom: 48px;
+    display:block; 
+    margin:auto;
+}
+
+#pixelNewsTitle{
+    font-size: 48px;
+    text-align:center;
+    margin:auto;
+}
+
+
+.tdNews{
+    font-size: 24px;
+    width: 360px;
+    padding-top: 12px;
+    text-align:center;
+}
+
+.borderNewsFrist{
+    border-bottom: 4px solid #FFFFFF;
+}
+.borderNews{
+    border-bottom: 2px solid #FFFFFF;
 }
