主要頁面建置完成

--- a/Assets/css/welcomeToPixelWorld.css
+++ b/Assets/css/welcomeToPixelWorld.css
@@ -25,3 +25,8 @@ body {
     transform: translate(-50%, -50%);
     text-align: center;
 }
+
+a{
+    text-decoration: none;
+    color: #FFFFFF;
+}
