--- a/Assets/css/pixelGameList.css
+++ b/Assets/css/pixelGameList.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Silver;
-    src: url(Assets/fontStyle/Silver.ttf)format("truetype");
+    src: url(/Assets/fontStyle/Silver.ttf)format("truetype");
 }
 
 html,
@@ -14,9 +14,9 @@ body {
     color: #FFFFFF;
 }
 
-.header{
-}
-#webMap{
+.header {}
+
+#webMap {
     border-bottom: 4px solid #FFFFFF;
 }
 
@@ -37,22 +37,60 @@ a {
     text-decoration: none;
     color: #FFFFFF;
 }
-.main {
+
+.sideLeft {
+    width: 120px;
     height: 100%;
-    text-align:center;
-    padding-left: 5%;
-    padding-right: 5%;
+    position: relative;
+    text-align: center;
+    float: left;
 }
 
-#pixelGameListTitle{
+.sideRight {
+    width: 120px;
+    height: 100%;
+    text-align: center;
+    float: right;
+}
+
+.main {
+    height: 100%;
+    text-align: center;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-bottom: -40px;
+
+}
+
+#pixelGameListTitle {
     font-size: 56px;
     border-bottom: #43DFFA solid 4px;
+    margin-left: auto - 120px;
+    margin-right: auto - 120px;
     margin-bottom: auto;
     padding-bottom: 10px;
 
 }
-#lineBr{
+
+#lineBr {
     border-top: #FFFFFF solid 2px;
     border-bottom: #FF307C solid 4px;
-    margin: auto;
+    margin-left: auto - 120px;
+    margin-right: auto - 120px;
+}
+
+#backHome {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+}
+
+h3 {
+    font-size: 36px;
+}
+
+.foot {
+    border-top: solid 4px #FFFFFF;
+    height: 20px;
 }
