--- a/Assets/css/welcomeToPixelWorld.css
+++ b/Assets/css/welcomeToPixelWorld.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Silver;
-    src: url(Assets/fontStyle/Silver.ttf)format("truetype");
+    src: url(fontStyle/Silver.ttf)format("truetype");
 }
 
 html,
