--- a/Assets/css/pixelArtistList.css
+++ b/Assets/css/pixelArtistList.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: Silver;
-    src: url(Assets/fontStyle/Silver.ttf)format("truetype");
+    src: url(/Assets/fontStyle/Silver.ttf)format("truetype");
 }
 
 html,
@@ -14,9 +14,11 @@ body {
     color: #FFFFFF;
 }
 
-.header{
+.header {
+    width: 100%;
 }
-#webMap{
+
+#webMap {
     border-bottom: 4px solid #FFFFFF;
 }
 
@@ -37,22 +39,90 @@ a {
     text-decoration: none;
     color: #FFFFFF;
 }
-.main {
+
+.sideLeft {
+    width: 120px;
     height: 100%;
-    text-align:center;
-    padding-left: 5%;
-    padding-right: 5%;
+    position: relative;
+    text-align: center;
+    float: left;
+    
 }
 
-#pixelArtistListTitle{
+.sideRight {
+    width: 120px;
+    height: 100%;
+    text-align: center;
+    float: right;
+    
+}
+
+.main {
+    height: 100%;
+    text-align: center;
+    margin-left: 120px;
+    margin-right: 120px;
+    margin-bottom: -40px;
+
+}
+
+#pixelArtistListTitle {
     font-size: 56px;
     border-bottom: #43DFFA solid 4px;
+    margin-left: auto - 120px;
+    margin-right: auto - 120px;
     margin-bottom: auto;
     padding-bottom: 10px;
 
 }
-#lineBr{
+
+#lineBr {
     border-top: #FFFFFF solid 2px;
     border-bottom: #FF307C solid 4px;
+    margin-left: auto - 120px;
+    margin-right: auto - 120px;
+
+}
+
+#artistTable, .tdName, .tdList {
+    border: 4px solid #FFFFFF;
+    border-collapse: collapse;
     margin: auto;
+
+}
+
+.tdName {
+    font-size: 24px;
+    width: 360px;
+    text-align: center;
+}
+
+.tdList {
+    font-size: 24px;
+    width: 720px;
+    text-align: center;
+}
+
+#pxBr {
+    padding-bottom: 20px;
+}
+
+h2 {
+    font-size: 28px;
+}
+
+#backHome {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+
+}
+
+h3 {
+    font-size: 36px;
+}
+
+.foot {
+    border-top: solid 4px #FFFFFF;
+    height: 20px;
 }
