--- a/Assets/css/aboutMaster.css
+++ b/Assets/css/aboutMaster.css
@@ -10,13 +10,11 @@ body {
     width: 100%;
     margin: 0 auto;
     background-color: #000000;
-    font-family: Silver, sans-serif;
+    font-family: Silver;
     color: #FFFFFF;
 }
 
-.header {
-    width: 100%;
-}
+.header {}
 
 #webMap {
     border-bottom: 4px solid #FFFFFF;
@@ -46,13 +44,16 @@ a {
     position: relative;
     text-align: center;
     float: left;
+    background-color: #000000;
 }
 
 .sideRight {
     width: 120px;
     height: 100%;
+    position: relative;
     text-align: center;
     float: right;
+    background-color: #000000;
 }
 
 .main {
@@ -60,10 +61,9 @@ a {
     text-align: center;
     margin-left: 120px;
     margin-right: 120px;
-    margin-bottom: -40px;
 }
 
-#pixelArtistListTitle {
+#aboutPixelTitle {
     font-size: 56px;
     border-bottom: #43DFFA solid 4px;
     margin-left: auto - 120px;
@@ -79,34 +79,6 @@ a {
     margin-right: auto - 120px;
 }
 
-#artistTable,
-.tdName,
-.tdList {
-    border: 4px solid #FFFFFF;
-    border-collapse: collapse;
-    margin: auto;
-}
-
-.tdName {
-    font-size: 24px;
-    width: 360px;
-    text-align: center;
-}
-
-.tdList {
-    font-size: 24px;
-    width: 720px;
-    text-align: center;
-}
-
-#pxBr {
-    padding-bottom: 20px;
-}
-
-h2 {
-    font-size: 28px;
-}
-
 #backHome {
     width: 100%;
     position: absolute;
@@ -118,7 +90,11 @@ h3 {
 }
 
 p {
-    font-size: 36px;
+    font-size: 24px;
+}
+
+#aboutMaster {
+    margin: auto;
 }
 
 .foot {}
